# typed

./: .gitignore  README.md  pyproject.toml
typed/: __init__.py  core.py  decorators.py  err.py  examples.py  extra.py  factories.py  foundations.py  general.py  helper.py  main.py  meta.py  models.py  more.py  poly.py  test.py  types.py  utils.py
typed/helper/: core.py  err.py  func.py  models.py  poly.py
typed/mods/: config.py  core.py  decorator.py  decorators.py  err.py  foundations.py  general.py  helper.py  helper_examples.py  helper_foundations.py  helper_models.py  loader.py  models.py  modifiers.py  poly.py  types_.py
typed/mods/factories/: base.py  extra.py  func.py  generics.py  meta.py  model.py  specifics.py  types.py
typed/mods/helper/: examples.py  foundations.py  func.py  general.py  helper.py  meta.py  models.py  more.py  null.py  types.py
typed/mods/meta/: base.py  factories.py  func.py  models.py  other.py
typed/mods/ops/: base.py  finite.py  func.py  generics.py
typed/mods/parametric/: base.py  func.py
typed/mods/types/: attr.py  base.py  builtin.py  core.py  examples.py  extra.py  factories.py  func.py  json.py  meta.py  number.py  other.py  path.py  specifics.py
