[project]
name = "typed"
version = "0.8.1"
description = "A typed approach to Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD"}
authors = [
    {name = "Yuri Ximenes", email = "ximenesyuri@gmx.ie"},
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["typed*"]

